# G431KB_TurnTable

./: README.md
Arduino/pub_exam/: pub_exam.ino
MR_Jung Lib/ros_lib/custom_msgs/: VelodyneCustom.h
MR_Jung Lib/ros_lib/encoder_msgs/: EncoderInfo.h
MR_Jung Lib/ros_lib/stryx_localization/: LiDARandIMU.h
MR_Jung Lib/ros_lib/ydlidar_ros_driver/: LaserFan.h
MR_Jung Lib/velodyne_custom/: README.md
MR_Jung Lib/velodyne_custom/custom_driver/: CMakeLists.txt  package.xml
MR_Jung Lib/velodyne_custom/custom_driver/config/: turn_table.rviz
MR_Jung Lib/velodyne_custom/custom_driver/include/custom_driver/: lidar_struct.h
MR_Jung Lib/velodyne_custom/custom_driver/src/: custom_driver.cpp
MR_Jung Lib/velodyne_custom/custom_msgs/: package.xml
MR_Jung Lib/velodyne_custom/custom_msgs/msg/: VelodyneCustom.msg
MR_Jung Lib/velodyne_custom/encoder_msgs/msg/: EncoderInfo.msg
ROS REF DATA/: ROS 사용해보자  ROS 설치 순서
ST G431kb_ros_test/: .mxproject  .project
ST G431kb_ros_test/Core/Inc/: main.h
ST G431kb_ros_test/Core/Inc/custom_msgs/: VelodyneCustom.h
ST G431kb_ros_test/Core/Src/: main.cpp  stm32g4xx_hal_msp.c  stm32g4xx_it.c
ST G431kb_ros_test/Debug/: G431kb_ros_test.elf
ST G431kb_ros_test/Debug/Core/Src/: stm32g4xx_hal_msp.su
ST G431kb_ros_test/Debug/Drivers/STM32G4xx_HAL_Driver/Src/: subdir.mk
stm32/: PWM 시간 계산법.txt  포팅할 과제 핀 아웃.txt
stm32/G431kb_ros_test/: .cproject  G431kb_ros_test Debug.launch  G431kb_ros_test.ioc
stm32/G431kb_ros_test/Core/Inc/: STM32Hardware.h  stm32g4xx_it.h
stm32/G431kb_ros_test/Debug/: G431kb_ros_test.list  G431kb_ros_test.map  makefile  objects.list  sources.mk
stm32/G431kb_ros_test/Debug/Core/Inc/: subdir.mk
stm32/G431kb_ros_test/Debug/Core/Src/: main.d  main.su  stm32g4xx_it.su  subdir.mk
stm32/MR정 Lib/ros_lib/novatel_gps_msgs/: NovatelRawImu.h
stm32/MR정 Lib/ros_lib/spinnaker_sdk_camera_driver/: SpinnakerImageNames.h
stm32/MR정 Lib/ros_lib/stryx_localization/: Extracts.h  RingIndex.h  ShapeData.h  VelodyneCustom.h
stm32/MR정 Lib/velodyne_custom/custom_driver/config/: lidar_channel_ids.yaml
stm32/MR정 Lib/velodyne_custom/custom_driver/include/custom_driver/: custom_driver.h  socket.h
stm32/MR정 Lib/velodyne_custom/custom_driver/launch/: run.launch
stm32/MR정 Lib/velodyne_custom/custom_driver/src/: main.cpp
stm32/MR정 Lib/velodyne_custom/custom_msgs/: CMakeLists.txt
stm32/MR정 Lib/velodyne_custom/encoder_msgs/: CMakeLists.txt  package.xml
stm32/MR정 Lib/velodyne_custom/velodyne_custom/: CHANGELOG.rst  CMakeLists.txt  package.xml
stm32/chatter/: .cproject  .mxproject  .project  chatter Debug.launch  chatter.ioc
stm32/chatter/Core/Inc/custom_msgs/: RingIndex.h
stm32/chatter/Core/Src/: main.cpp  stm32f4xx_hal_msp.c  stm32f4xx_it.c
stm32/chatter/Debug/: chatter.elf  chatter.list  chatter.map  makefile  objects.list
stm32/chatter/Debug/Core/Src/: main.d  main.su  subdir.mk
