<?xml version="1.0"?>
<package format="2">
  <name>encoder_msgs</name>
  <version>1.5.2</version>
  <description>
    ROS message definitions for Encoder.
  </description>
  <maintainer email="haebum.j@stryx.co.kr">Haebum Jung</maintainer>
  <author>>Haebum Jung</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>

  <depend>std_msgs</depend>

  <exec_depend>message_runtime</exec_depend>
</package>
