<?xml version="1.0"?>
<package format="2">
  <name>velodyne_custom</name>
  <version>1.5.2</version>
  <description>
    Custom Velodyne ROS driver for stryx hardware.
  </description>
  <maintainer email="haebum.j@stryx.co.kr">Haebum Jung</maintainer>
  <author>Haebum Jung</author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>encoder_msgs</exec_depend>
  <exec_depend>custom_msgs</exec_depend>
  <exec_depend>custom_driver</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
